@@ -9,6 +9,7 @@ SVN version: ?????
 
 Heads up!
 ~~~~~~~~~
+- Added keys() and values() methods to util.collections.Map
 - Set client charset in rdbms.sybase.SybaseConnection to iso_1
   (friebe, kiesel)
 - Added check for correct configuration of timezone at bootstrap time
